# devlogix_tasks_service

./: README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
src/tasks/: main.py
src/tasks/api/: dependencies.py  tasks.py
src/tasks/application/protocols/: repository.py  unit_of_work.py
src/tasks/application/repositories/: tasks.py
src/tasks/application/services/: tasks.py
src/tasks/core/: base.py  config.py
src/tasks/domain/models/: association_tables.py  tasks.py  users.py
src/tasks/domain/schemas/: __init__.py  tasks.py  users.py
src/tasks/infrastructure/: db.py
src/tasks/infrastructure/migrations/: env.py
